<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="username"
        android:hint="@string/val1"
        android:inputType="number"
        android:labelFor="@+id/valor2"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:hint="@string/val2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valor2">

        <RadioButton
            android:id="@+id/opcSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_suma"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/opcResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_resta"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/opcMultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiplicacion"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/opcDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_division"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/botonResultado"
        android:layout_width="205dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:onClick="calcular"
        android:textSize="20sp"
        android:text="@string/botonRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:text="@string/botonRes" />

    <TextView
        android:id="@+id/visorResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:hint="@string/visorRes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonResultado" />

    <TextView
        android:id="@+id/editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="112dp"
        android:text="@string/editor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visorResultado"
        tools:text="@string/editor" />

</androidx.constraintlayout.widget.ConstraintLayout>
